--- a/src/assets/PokemonDetail.css
+++ b/src/assets/PokemonDetail.css
@@ -59,7 +59,7 @@
     align-items: center;
     cursor: pointer;
 
-    z-index: 3;
+    z-index: 4;
 }
 
 .pokeball-catch button {
@@ -80,7 +80,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(58, 58, 58, 0.9);
-    z-index: 2;
+    z-index: 3;
 }
 
 .modal__close {
